--- a/index.html
+++ b/index.html
@@ -49,6 +49,34 @@
                                     <use href="./images/icons.svg#icon-close"></use>
                                 </svg>
                             </button>
+                            <h2 class="form-title">Залиште свої дані, ми вам передзвонимо</h2>
+                            <form action="/" name="contact-form" autocomplete="on">
+                                <label class="form-label-group" for="username">
+                                    <span class="form-fields-text">Ім'я</span>
+                                    <input class="form-input" id="username" type="text" name="username">
+                                    <svg class="form-icon" width="18" height="18">
+                                        <use href="./images/icons.svg#icon-person-black"></use>
+                                    </svg>
+                                </label>
+                                <label class="form-label-group" for="usertel">
+                                    <span class="form-fields-text">Телефон</span>
+                                    <input class="form-input" id="usertel" type="text" name="usertel">
+                                    <svg class="form-icon" width="18" height="18">
+                                        <use href="./images/icons.svg#icon-phone-black"></use>
+                                    </svg>
+                                </label>
+                                <label class="form-label-group" for="useremail">
+                                    <span class="form-fields-text">Пошта</span>
+                                    <input class="form-input" id="useremail" type="text" name="useremail">
+                                    <svg class="form-icon" width="18" height="18">
+                                        <use href="./images/icons.svg#icon-email-black"></use>
+                                    </svg>
+                                </label>
+                                    <label class="form-label-group" for="">
+                                        <span class="form-fields-text">Коментар</span>
+                                        <textarea class="form-comment" name="username-comment" id="username-comment" placeholder="Введіть текст"></textarea>
+                                    </label>
+                            </form>
                         </div>
                     </div>
             </div>
