--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                                         <span class="form-fields-text">Коментар</span>
                                         <textarea class="form-text" name="username-comment" id="comment" placeholder="Введіть текст"></textarea>
                                     </label>
+                                    <input class="checkbox-input visually-hidden" id="terms-checkbox" type="checkbox" name="terms-checkbox">
+                                    <label class="checkbox-label" for="terms-checkbox">Погоджуюся з розсилкою та приймаю 
+                                        <a class="checkbox-link" href="/">Умови договору</a>
+                                    </label>
                                 <button class="button-form" type="submit">Відправити</button>
                             </form>
                         </div>
