--- a/portfolio.html
+++ b/portfolio.html
@@ -207,6 +207,22 @@
                     </li>
                 </ul>
             </div>
+            <div class="mailing">
+                <form action="/">
+                    <p class="mailing-title">Підпишіться на розсилку</p>
+                    <div class="mailing-form">
+                        <label class="mailing-list" for="mail"></label>
+                        <input class="mailing-field" id="mail" type="email" name="mail" placeholder="E-mail">
+                        <button class="mailing-button" type="submit">Підписатися
+                            <span class="mailing-icon">
+                                <svg class="icon-send" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-send"></use>
+                                </svg>
+                            </span>
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
