--- a/index.html
+++ b/index.html
@@ -42,55 +42,6 @@
             <div class="container advantages-box">
                 <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
                 <button type="button" class="button" data-modal-open>Замовити послугу</button>
-                    <div class="backdrop is-hidden" data-modal>
-                        <div class="modal">
-                            <button class="modal-button" type="button" data-modal-close>
-                                <svg class="close-icon" width="18" height="18">
-                                    <use href="./images/icons.svg#icon-close"></use>
-                                </svg>
-                            </button>
-                            <p class="form-title">Залиште свої дані, ми вам передзвонимо</p>
-                            <form action="/" name="contact-form" autocomplete="on">
-                                <label class="form-label-group" for="username">
-                                    <span class="form-fields-text">Ім'я</span>
-                                    <input class="form-input" id="username" type="text" name="username">
-                                    <svg class="form-icon" width="18" height="18">
-                                        <use href="./images/icons.svg#icon-person-black"></use>
-                                    </svg>
-                                </label>
-                                <label class="form-label-group" for="usertel">
-                                    <span class="form-fields-text">Телефон</span>
-                                    <input class="form-input" id="usertel" type="text" name="usertel">
-                                    <svg class="form-icon" width="18" height="18">
-                                        <use href="./images/icons.svg#icon-phone-black"></use>
-                                    </svg>
-                                </label>
-                                <label class="form-label-group" for="useremail">
-                                    <span class="form-fields-text">Пошта</span>
-                                    <input class="form-input" id="useremail" type="text" name="useremail">
-                                    <svg class="form-icon" width="18" height="18">
-                                        <use href="./images/icons.svg#icon-email-black"></use>
-                                    </svg>
-                                </label>
-                                <label class="form-comment" for="comment">
-                                    <span class="form-fields-text">Коментар</span>
-                                    <textarea class="form-text" name="username-comment" id="comment" placeholder="Введіть текст"></textarea>
-                                </label>
-                                <label class="form-terms-group">
-                                    <input class="checkbox visually-hidden" type="checkbox">
-                                    <span class="terms-icon">
-                                        <svg class="terms-checked" width="16" height="15">
-                                            <use href="./images/icons.svg#icon-icon-check2"></use>
-                                        </svg>
-                                    </span>
-                                    <span class="terms-text">Погоджуюся з розсилкою та приймаю
-                                        <a class="terms-link" href="/">Умови договору</a>
-                                    </span>
-                                </label>
-                                <button class="button-form" type="submit">Відправити</button>
-                            </form>
-                        </div>
-                    </div>
             </div>
         </section>
         <!--Advantages-->
@@ -429,6 +380,56 @@
             </div>
         </div>
     </footer>
+    <!-- BACKDROP -->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="modal-button" type="button" data-modal-close>
+                <svg class="close-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="form-title">Залиште свої дані, ми вам передзвонимо</p>
+            <form action="/" name="contact-form" autocomplete="on">
+                <label class="form-label-group" for="username">
+                    <span class="form-fields-text">Ім'я</span>
+                    <input class="form-input" id="username" type="text" name="username">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person-black"></use>
+                    </svg>
+                </label>
+                <label class="form-label-group" for="usertel">
+                    <span class="form-fields-text">Телефон</span>
+                    <input class="form-input" id="usertel" type="text" name="usertel">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-phone-black"></use>
+                    </svg>
+                </label>
+                <label class="form-label-group" for="useremail">
+                    <span class="form-fields-text">Пошта</span>
+                    <input class="form-input" id="useremail" type="text" name="useremail">
+                    <svg class="form-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                </label>
+                <label class="form-comment" for="comment">
+                    <span class="form-fields-text">Коментар</span>
+                    <textarea class="form-text" name="username-comment" id="comment" placeholder="Введіть текст"></textarea>
+                </label>
+                <label class="form-terms-group">
+                    <input class="checkbox visually-hidden" type="checkbox">
+                    <span class="terms-icon">
+                        <svg class="terms-checked" width="16" height="15">
+                            <use href="./images/icons.svg#icon-icon-check2"></use>
+                        </svg>
+                    </span>
+                    <span class="terms-text">Погоджуюся з розсилкою та приймаю
+                        <a class="terms-link" href="/">Умови договору</a>
+                    </span>
+                </label>
+                <button class="button-form" type="submit">Відправити</button>
+            </form>
+        </div>
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 </html>
